--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -6,3 +6,10 @@
   volume  = 1,
   number  = 1
 }
+@article{example2,
+  title = {Between eye and the mind. Technology, cognition and knowledge development –  eye-tracking study report},
+  author={Michalik, Tomasz},
+  journal = {AARG News 03/2014},
+  year    = 2014,
+  volume  = 48,
+  }
